--- a/common/styles.css
+++ b/common/styles.css
@@ -6,8 +6,8 @@ html,body /* Controls overall style of the web site */
 	font-size:12pt;
 	width:100%;
 	height:100%;
-	color:#000000;
-	background-color:rgb(120,120,190);
+	color:#ffffff;
+	background-image:linear-gradient(to right, #6B0EB2 , #400CB2);
 	margin:0px;
 }
 
@@ -27,12 +27,13 @@ body {
 /* Style the header */
 .header {
   grid-area: header;
-  background-color: rgb(120,120,190);  
+  background-image:linear-gradient(to right, #6B0EB2 , #400CB2);
   text-align: center;
   font-size: 35px;
   color: #ffffff;  
   
 }
+
 /* Style the SideNav*/
 .sidenav {
   height:100% ;
@@ -60,7 +61,135 @@ body {
   color: rgb(120,120,190); 
 }
 
-/* The grid container */
+/* shop style */
+div.shop-item {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 500px;
+  background-color: #fff;
+        
+  }
+
+div.shop-item:hover {
+  border: 1px solid #777;
+}
+
+div.shop-item img {
+  width: 100%;
+  height: auto;
+}
+
+div.shop-item-details {
+  padding: 15px;
+  text-align: center;
+  background-color: #000000;
+  color: #ffffff;
+    
+}
+p{
+	color: #fff;
+}
+.shop-item-price{
+	color:#ff0000;
+}
+.shop-item-title {
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #fff;
+  }
+ .cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #fff;
+}
+.cart-column {
+    display: inline-block;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+.cart-row {
+    display: inline-block;
+}
+.cart-item {
+    width: 35%;
+	
+}
+.cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #fff;
+	
+}
+
+.cart-quantity {
+    width: 10%;
+	
+}
+
+.cart-item-title {
+    color: #fff;
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+	
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+	
+}
+
+.btn-danger:hover {
+    background-color: #CC4C4C;
+}
+
+.cart-row:last-child {
+    border-bottom: 1px solid fff;
+}
+
+.cart-row:last-child .cart-column {
+    border: none;
+}
+
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: fff;
+    margin-right: 20px;
+}
+
+.cart-total-price {
+    color: #000;
+    font-size: 1.1em;
+}
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
+}
+ /*The grid container */
 .grid-container {
   display: grid;
   height: 100%;
@@ -68,7 +197,7 @@ body {
     'header header header' 
     'left middle1 right' 
     'footer footer footer';
-    /*grid-column-gap: 10px; - if you want gap between the columns*/
+   /*grid-column-gap: 10px;  if you want gap between the columns*/
 } 
 
 .left,
@@ -83,23 +212,27 @@ body {
   grid-area: left;
 }
 
-/* Style the middle column 
+ /*Style the middle column */
 .middle {
   grid-area: middle;
+  width: auto;
+  
 }
-*/
 
 /* Style the right column */
 .right {
   grid-area: right;
+  
+  
 }
 
 /* Style the footer */
 .footer {
   grid-area: footer;
-  background-color: #f1f1f1;
+  background-color: #fff;
   padding: 10px;
   text-align: center;
+  
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@@ -116,6 +249,8 @@ body {
 .middle1
 	{
 		grid-area:middle1;
+		background-image:linear-gradient(to right, #6B0EB2 , #400CB2);
+		
 	} 
 
 	
