changed location of files in previous commit

--- a/common/styles.css
+++ b/common/styles.css
@@ -189,6 +189,23 @@ p{
     margin: 40px auto 80px auto;
     font-size: 1.75em;
 }
+/*payment styles*/
+
+#main_tbl
+{
+	width:100%;
+	height:100%;
+	color:#000000;
+}
+#title
+{
+	text-align:center;
+	font-size:150%;
+	font-weight:bold;
+	color:#6B0EB2;
+}
+
+
  /*The grid container */
 .grid-container {
   display: grid;
