--- a/common/login.css
+++ b/common/login.css
@@ -102,10 +102,10 @@ body {
   }
 }
 
-.tab-content > div:last-child {
+/*.tab-content > div:last-child {
   display:none;
 }
-
+*/
 
 h1 {
   text-align:center;
